--- a/super-comic-buttons/options.html
+++ b/super-comic-buttons/options.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 
-<head>
+<head data-ng-csp>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Super Comic Buttons: Options</title>
     <link rel="stylesheet" href="options.css" />
     <script src="lib/jquery-3.3.1.min.js"></script>
+    <script src="lib/angular.min.js"></script>
     <script src="storage.js"></script>
     <script src="options.js"></script>
     <script src="notifications.js"></script>
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-f"></div>
-        <div class="col-l pad">
-            <p>How frequently should the program automatically check for updates?</p>
-        </div>
-        <form>
-            <div class="col-r padradio">
-                <input id="period-number" type="number" min="1" />
-                <label for="period-number">minutes</label>
-                <input id="period-button" , type="button" value="Update" />
+    <div data-ng-app="options" data-ng-controller="optionsCtrl">
+        <div class="row">
+            <div class="col-f"></div>
+            <div class="col-l pad">
+                <p>How frequently should the program automatically check for updates?</p>
             </div>
-        </form>
-    </div>
-    <div class="row">
-        <div class="col-f"></div>
-        <div class="col-l pad">
-            <p>Should stored data and options use Firefox Sync?</p>
+            <form name="period">
+                <div class="col-r padradio">
+                    <input data-ng-model="storage.periodMinutes" id="period" type="number" min="1" />
+                    <label for="period">minutes</label>
+                    <button data-ng-click="periodClick()" data-ng-disabled="period.$invalid">Update</button>
+                </div>
+            </form>
         </div>
-        <form>
-            <div class="col-r padradio">
-                <input id="local-store-radio" name="mode" type="radio" checked />
-                <label for="local-store-radio">Do not use Firefox Sync</label>
-                <input id="sync-store-radio" name="mode" type="radio" />
-                <label for="sync-store-radio">Use Firefox Sync</label>
+        <div class="row">
+            <div class="col-f"></div>
+            <div class="col-l pad">
+                <p>Should stored data and options use Firefox Sync?</p>
             </div>
-        </form>
-    </div>
-    <div class="row">
-        <div class="col-l pad">
-            <p id="force-info-text">placeholder</p>
+            <form>
+                <div class="col-r padradio">
+                    <input data-ng-change="syncSwitch()" data-ng-value="false" data-ng-model="storage.useSync" id="local-store" type="radio" />
+                    <label for="local-store">Do not use Firefox Sync</label>
+                    <input data-ng-value="true" data-ng-model="storage.useSync" id="sync-store" type="radio" />
+                    <label for="sync-store">Use Firefox Sync</label>
+                </div>
+            </form>
         </div>
-        <div class="col-r padradio">
-            <input type="button" id="force-save-button" value="Save to Firefox Sync" />
-            <input type="button" id="force-load-button" value="Load from Firefox Sync" />
+        <div class="row">
+            <div class="col-l pad">
+                <p data-ng-class="{warning: options.needsWarning}">{{ options.infoText }}</p>
+            </div>
+            <div class="col-r padradio">
+                <button data-ng-click="forceSaveClick()" data-ng-disabled="!storage.useSync">Save to Firefox Sync</button>
+                <button data-ng-click="forceSaveLoad()" data-ng-disabled="!storage.useSync">Load from Firefox Sync</button>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-f"></div>
-        <div class="col-l pad">
-            <p>
-                Should this program notify you of errors returned when a feed cannot be read?<br />
-                <small>This error information is not likely to be useful</small>
-            </p>
+        <div class="row">
+            <div class="col-f"></div>
+            <div class="col-l pad">
+                <p>
+                    Should this program notify you of errors returned when a feed cannot be read?<br />
+                    <small>This error information is not likely to be useful</small>
+                </p>
 
-        </div>
-        <form>
-            <div class="col-r padradio">
-                <input id="no-error-radio" name="mode" type="radio" checked />
-                <label for="no-error-radio">Do not notify me of errors</label>
-                <input id="yes-error-radio" name="mode" type="radio" />
-                <label for="yes-error-radio">Notify me of errors</label>
             </div>
-        </form>
-        <div class="col-f"></div>
+            <form>
+                <div class="col-r padradio">
+                    <input data-ng-change="errorSwitch()" data-ng-value="false" data-ng-model="storage.notifyMe" id="no-error" type="radio" />
+                    <label for="no-error">Do not notify me of errors</label>
+                    <input data-ng-value="true" data-ng-model="storage.notifyMe" id="yes-error" type="radio" />
+                    <label for="yes-error">Notify me of errors</label>
+                </div>
+            </form>
+            <div class="col-f"></div>
+        </div>
     </div>
 </body>
