--- a/tests/shared-tests.html
+++ b/tests/shared-tests.html
@@ -9,6 +9,8 @@
     <script src="https://code.jquery.com/qunit/qunit-2.6.2.js"></script>
     <script src="../super-comic-buttons/my-array.js"></script>
     <script src="my-array-tests.js"></script>
+    <script src="../super-comic-buttons/util.js"></script>
+    <script src="utils-tests.js"></script>
 </head>
 
 <body>
